# rust-backend-template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yml
docker/: docker-compose.yml
entity/: Cargo.toml
migration/: Cargo.toml
src/: main.rs
src/shared/: ctx.rs  db.rs  error.rs  mod.rs
